SERVER-103955 Primary only transitions to commitQuorumSatisified after itself has voted (#45227)

GitOrigin-RevId: 545fb6457f156a096fb804f73bcde18b8fc73fc7